// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_edit_history/edited_post_item should match snapshot 1`] = `
<div
  className="edit-post__container"
>
  <ForwardRef
    aria-label="Toggle to see an old message."
    className="edit-post__icon__button"
    compact={true}
    icon="chevron-right"
    onClick={[Function]}
    size="sm"
  />
  <PostAriaLabelDiv
    className="a11y__section post"
    id="searchResult_post_id"
    post={
      Object {
        "channel_id": "",
        "create_at": 0,
        "delete_at": 0,
        "edit_at": 0,
        "hashtags": "",
        "id": "post_id",
        "is_pinned": false,
        "message": "post message",
        "metadata": Object {
          "embeds": Array [],
          "emojis": Array [],
          "files": Array [],
          "images": Object {},
          "reactions": Array [],
        },
        "original_id": "",
        "pending_post_id": "",
        "props": Object {},
        "reply_count": 0,
        "root_id": "",
        "type": "system_add_remove",
        "update_at": 0,
        "user_id": "user_id",
      }
    }
  >
    <div
      aria-hidden="true"
      className="edit-post__date__container"
    >
      <span
        className="edit-post__date"
      >
        <Connect(injectIntl(Timestamp))
          ranges={
            Array [
              Object {
                "display": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Today"
                  id="date_separator.today"
                />,
                "equals": Array [
                  "day",
                  0,
                ],
              },
              Object {
                "display": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Yesterday"
                  id="date_separator.yesterday"
                />,
                "equals": Array [
                  "day",
                  -1,
                ],
              },
            ]
          }
          value={0}
        />
      </span>
      <OverlayTrigger
        defaultOverlayShown={false}
        delayShow={400}
        overlay={
          <Tooltip
            className="hidden-xs"
            id="editPostRestoreTooltip"
          >
            Restore
          </Tooltip>
        }
        placement="bottom"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <ForwardRef
          aria-label="Select to restore an old message."
          className="edit-post__icon__button"
          compact={true}
          icon="refresh"
          onClick={[Function]}
          size="sm"
        />
      </OverlayTrigger>
    </div>
  </PostAriaLabelDiv>
</div>
`;

exports[`components/post_edit_history/edited_post_item should match snapshot when isCurrent is true 1`] = `
<div
  className="edit-post__container edit-post__container__background"
>
  <ForwardRef
    aria-label="Toggle to see an old message."
    className="edit-post__icon__button"
    compact={true}
    icon="chevron-down"
    onClick={[Function]}
    size="sm"
  />
  <PostAriaLabelDiv
    className="a11y__section post"
    id="searchResult_post_id"
    post={
      Object {
        "channel_id": "",
        "create_at": 0,
        "delete_at": 0,
        "edit_at": 0,
        "hashtags": "",
        "id": "post_id",
        "is_pinned": false,
        "message": "post message",
        "metadata": Object {
          "embeds": Array [],
          "emojis": Array [],
          "files": Array [],
          "images": Object {},
          "reactions": Array [],
        },
        "original_id": "",
        "pending_post_id": "",
        "props": Object {},
        "reply_count": 0,
        "root_id": "",
        "type": "system_add_remove",
        "update_at": 0,
        "user_id": "user_id",
      }
    }
  >
    <div
      aria-hidden="true"
      className="edit-post__date__container"
    >
      <span
        className="edit-post__date"
      >
        <Connect(injectIntl(Timestamp))
          ranges={
            Array [
              Object {
                "display": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Today"
                  id="date_separator.today"
                />,
                "equals": Array [
                  "day",
                  0,
                ],
              },
              Object {
                "display": <Memo(MemoizedFormattedMessage)
                  defaultMessage="Yesterday"
                  id="date_separator.yesterday"
                />,
                "equals": Array [
                  "day",
                  -1,
                ],
              },
            ]
          }
          value={0}
        />
      </span>
    </div>
    <div
      className="edit-post__current__indicator"
    >
      Current Version
    </div>
    <div
      className="edit-post__header"
    >
      <span
        className="profile-icon"
      >
        <Memo(Avatar)
          className="avatar-post-preview"
          size="sm"
          url="/api/v4/users/user_id/image?_=0"
        />
      </span>
      <div
        className="edit-post__header__username"
      >
        <Connect(UserProfile)
          disablePopover={true}
          hasMention={true}
          userId="user_id"
        />
      </div>
    </div>
    <div
      className="post__content"
    >
      <div
        className="search-item-snippet post__body"
      >
        <Connect(PostBodyAdditionalContent)
          post={
            Object {
              "channel_id": "",
              "create_at": 0,
              "delete_at": 0,
              "edit_at": 0,
              "hashtags": "",
              "id": "post_id",
              "is_pinned": false,
              "message": "post message",
              "metadata": Object {
                "embeds": Array [],
                "emojis": Array [],
                "files": Array [],
                "images": Object {},
                "reactions": Array [],
              },
              "original_id": "",
              "pending_post_id": "",
              "props": Object {},
              "reply_count": 0,
              "root_id": "",
              "type": "system_add_remove",
              "update_at": 0,
              "user_id": "user_id",
            }
          }
        >
          <Connect(PostMessageView)
            isRHS={true}
            post={
              Object {
                "channel_id": "",
                "create_at": 0,
                "delete_at": 0,
                "edit_at": 0,
                "hashtags": "",
                "id": "post_id",
                "is_pinned": false,
                "message": "post message",
                "metadata": Object {
                  "embeds": Array [],
                  "emojis": Array [],
                  "files": Array [],
                  "images": Object {},
                  "reactions": Array [],
                },
                "original_id": "",
                "pending_post_id": "",
                "props": Object {},
                "reply_count": 0,
                "root_id": "",
                "type": "system_add_remove",
                "update_at": 0,
                "user_id": "user_id",
              }
            }
          />
        </Connect(PostBodyAdditionalContent)>
      </div>
    </div>
  </PostAriaLabelDiv>
</div>
`;
